--- a/posts/home.mdx
+++ b/posts/home.mdx
@@ -1,16 +1,16 @@
 # Introduction
 
-This blog is a getting started guide for developing modern APIs, browser based apps and mobile apps. The main focus is development setups in a distributed architecture. With the latest technology stacks this seems straightforward at first sight, but end-to-end flows require technical foundations before such solutions are production-ready.
+This blog is a getting started guide for developing APIs, browser based apps and mobile apps, using modern technology stacks. Although this may seem straightforward, end-to-end flows require technical foundations before such solutions are production-ready. The main blog focus is developer and code setups in a distributed architecture, to get the foundations right. 
 
-### API Foundations
+### API Technical Qualities
 
-Before most APIs and clients can be run in production, they need a number of technical qualities:
+Before most APIs and API clients can be run in production, they need a number of technical behaviors:
 
 | Quality | Description |
 | ------- | ----------- | 
 | <span style={{color:'green'}}>**Secure**</span> | Client call APIs using message credentials containing user attributes that APIs use to protect business data. |
 | <span style={{color:'green'}}>**Reliable**</span> | Clients and APIs handle error, expiry and concurrency conditions correctly. |
-| <span style={{color:'green'}}>**Productive**</span> | Code is readable and cleanly separated so that people understand it and which you can easily grow the code base. |
+| <span style={{color:'green'}}>**Productive**</span> | Code is readable and cleanly separated so that people understand it and can grow the business logic. |
 | <span style={{color:'green'}}>**Scalable**</span> | Once integrated you can extend the architecture to many APIs and clients without extra complexity. |
 
 ### The OAuth 2.0 Authorization Framework
@@ -26,16 +26,17 @@ I explain a setup that enables you to run secure end-to-end API and client flows
 - Designing for <span style={{color:'green'}}>**manageability**</span> to avoid pain points.
 - Coding with <span style={{color:'green'}}>**portability**</span> to keep future options open.
 - Ensuring <span style={{color:'green'}}>**reliability**</span> by rehearsal of failure scenarios.
-- Enabling <span style={{color:'green'}}>**productivity**</span> due to a focus on developer setups.
+- Enabling <span style={{color:'green'}}>**productivity**</span> due to an investment in developer setups.
 
 ### Code Samples
 
-This blog is code-centric with a focus on modern code that uses a separation of concerns. I provide a number of [Code Samples](https://github.com/gary-archer) which I use to stay up to date with mainstream technology stacks. The code is intentionally moderately complex, with a fair amount of plumbing to deal with foundational behaviours. At a real organization, a technical goal would be a clean code setup that enables the valuable business logic to scale.
-
+This blog is code-centric where code separates technical concerns. I provide a number of [Code Samples](https://github.com/gary-archer) which I use to stay up to date with mainstream technology stacks. The code is intentionally moderately complex, with a fair amount of plumbing to deal with foundational behaviours. At a real organization, a technical goal would be a coding style that enables the valuable business logic to scale.
 
 ![repos](/images/1/repos.jpg)
 
-The samples cover a developer journey that starts with a security-first setup. Next, I use OAuth to secure APIs and clients using standards-based, portable code. During integration I rehearse error, expiry and concurrency conditions, to ensure reliability. Any reader can run the code samples as working solutions and borrow ideas from the code. By default, I configure the example APIs and clients to use my personal cloud-hosted authorization server, or you can repoint them to your own.
+The samples cover a developer journey that starts with a security-first setup. Next, I use OAuth to secure APIs and clients using standards-based, portable code. During integration I rehearse error, expiry and concurrency conditions, to ensure reliability.
+
+Any reader can run the code samples as working solutions and borrow ideas from the code. By default, I configure the example APIs and clients to use my personal cloud-hosted authorization server, or you can repoint them to your own.
 
 ### Where Are We?
 
